--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         .watermark {
             position: relative;
             text-align: center;
-            color: #FFFFFF;
+            color: #000000;
             font-size: 0.75em;
             margin-top: 20px;
             padding: 10px;
@@ -597,7 +597,17 @@
             }
             
             h1 {
-                font-size: 1.8em;
+                font-size: 1.5em;
+                margin-bottom: 5px;
+            }
+
+            .subtitle {
+                font-size: 1em;
+                margin-bottom: 20px;
+            }
+
+            .container {
+                padding: 20px 15px;
             }
 
             .door-icon {
@@ -608,8 +618,98 @@
                 font-size: 0.65em;
             }
 
-            .container {
-                padding: 20px;
+            .map-container {
+                padding: 20px 15px;
+            }
+
+            .map-title {
+                font-size: 1.2em;
+                margin-bottom: 15px;
+            }
+
+            .maze-grid {
+                padding: 3px;
+                gap: 2px;
+            }
+
+            .maze-legend {
+                gap: 10px;
+                margin-top: 15px;
+            }
+
+            .legend-item {
+                font-size: 0.75em;
+                padding: 5px 10px;
+            }
+
+            .legend-box {
+                width: 18px;
+                height: 18px;
+            }
+
+            .team-info, .progress-info {
+                font-size: 0.9em;
+                padding: 12px;
+            }
+
+            .maze-content {
+                padding: 20px 15px;
+            }
+
+            .maze-content h3 {
+                font-size: 1.2em;
+            }
+
+            .maze-content h4 {
+                font-size: 1em;
+            }
+
+            .maze-content p, .maze-content ul {
+                font-size: 0.9em;
+            }
+
+            .question-box {
+                padding: 15px;
+            }
+
+            .question-box h4 {
+                font-size: 1em;
+            }
+
+            .option {
+                padding: 12px;
+                font-size: 0.9em;
+            }
+
+            .btn {
+                padding: 12px 30px;
+                font-size: 1em;
+            }
+
+            .score-display {
+                padding: 25px;
+            }
+
+            .score-display h3 {
+                font-size: 2.5em;
+            }
+
+            .completion-screen h2 {
+                font-size: 1.5em;
+            }
+
+            .performance-badge {
+                font-size: 1em;
+                padding: 8px 20px;
+            }
+
+            .watermark {
+                font-size: 0.65em;
+                padding: 5px;
+            }
+
+            body {
+                padding: 10px;
             }
         }
     </style>
